Background and foreground colors do not have a sufficient contrast ratio. so fixing that

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -51,7 +51,7 @@ body
   Font-Family: 'Source Sans Pro', Sans-Serif;
   Font-Size: 1.2rem;
   font-display: swap;
-  background-color: #e8e8e8;
+  background-color: #f0efef;
 }
 
 header
